tests/parser/errors/match_case_pattern_field.mochi
type Pt = { x: int, y: int }
let p = Pt { x: 1, y: 2 }
let r = match p { p.x => "x" _ => "other" }
