tests/parser/errors/match_case_pattern_field.err
error[P063]: match case pattern is not a recognised pattern shape
  --> tests/parser/errors/match_case_pattern_field.mochi:3:19

  3 | let r = match p { p.x => "x" _ => "other" }
    |                   ^

help:
  A pattern must be a literal (e.g. `1`, `"foo"`, `true`, `null`), an identifier (e.g. `x`, `_`, or a variant name like `Leaf`), or a variant constructor call (e.g. `Node(l, v, r)`). Compound expressions, indexing, field access, casts, and quoted constructors are not patterns.
